sass/_header.scss
#header {
    position: absolute;
    width: 100%;
    top: 0px;
    background: transparent;
    border-bottom: none;
    height: $header-height;
    z-index: 2;

    #header-bottom-left {
        position: absolute;
        bottom: 0px;

        left: $side-margin + $tab-bar-offset;
        right: $side-margin + $tab-bar-offset + $sidebar-width + $content-side-space;

        @media (max-width: $mobile-breakpoint) {
            right: $side-margin-mobile + $tab-bar-offset-mobile + $sidebar-width-mobile + $content-side-space;
            left: $side-margin-mobile + $tab-bar-offset-mobile;
        }

        background: rgba(50, 60, 70, 0.8);
        border-top-left-radius: 2px;
        border-top-right-radius: 2px;
        text-align: center;

        /* Need to push up redditname when no tabs */
        min-height: 48px;

        /* Get rid of nbsp */
        font-size: 0px;

        /* Tabs being supplied elsewhere on submit page */
        .submit-page & {
            visibility: hidden;
        }


        #header-img {

            visibility: visible;
            position: absolute;
            left: -40px;
            top: 60px - $header-height;
            width: 64px;
            height: 64px;

            @include sprite($icon-social-reddit);
            margin-top: 10px;
            opacity: 0.8;
            transition: opacity 0.2s;

            @media (max-width: $mobile-breakpoint) {
                left: 4px;
            }

            &:hover {
                opacity: 1;
            }
        }

        .redditname {
            visibility: visible;
            position: absolute;
            height: 80px;
            line-height: 80px;
            top: -80px;
            left: 0px;
            width: 100%;
            color: white;

            a {
                color: white;
                font-size: 50px;
                font-family: $default-font-stack;
                font-weight: 100;
                letter-spacing: 14px;
                font-variant: small-caps;
                text-transform: lowercase;

                &:hover {
                    text-decoration: none;
                }

                &::before {
                    content: '/r/';
                }
            }
        }
    }

    #header-bottom-right {
        position: absolute;
        top: 25px;
        bottom: initial;
        background: transparent;
        margin: 10px;
        margin-right: 18px;

        &:not(.res-navTop) {
            padding: 12px;
            background: rgba(255, 255, 255, 0.5);
            border-radius: 0px;
        }

        /* No one needs this right? */
        .beta-hint[style],
        .beta-hint {
            display: none !important;
        }

        .message-count {
            background: rgba(255, 92, 92, 0.63);
        }

        #userbarToggle {
            border-radius: 0px;
            background: rgba(60,60,60,0.8);
            transition: background 0.2s, color 0.2s;
            border: none;
            width: 40px;
            left: -40px;
            text-align: center;
            line-height: 35px;
            padding: 0px;
            font-size: 40px;
            font-weight: 100;
            color: #DDD;

            &:hover {
                color: #FFF;
                background: rgba(60,60,60,0.9);
            }
        }

        /* For RES Users */
        &.res-navTop {
            background: rgba(40,40,40,0.3);
            margin-right: 0px;
            height: 40px;
            line-height: 40px;
            font-size: 11px;
            font-weight: 100;

            * {
                text-transform: capitalize;
                font-weight: normal;
            }

            a, a:visited {
                color: white;
            }

            .separator {
                margin: 0px 10px;
                width: 1px;
                height: 100%;
                text-indent: 10px;
                background: #999;
            }

            .message-count {
                border-radius: 0px;
                width: 30px;
                text-align: center;
                font-size: $paragraph-text-size;;
                margin-left: 6px;
            }

            .user {
                margin-left: 12px;
            }

            .logout {
                margin-right: 12px;
            }
        }


    }

    // Subreddits lining top
    #sr-header-area {
        background: rgba(0,0,0,0.2);
        border: none;
        padding: 0 12px;
        height: $sr-header-height;
        line-height: $sr-header-height;
        color: #AAA;

        a, .dropdown.srdrop .selected {
            color: #AAA;
            height: $sr-header-height;
            line-height: $sr-header-height;

            &:hover {
                color: #DDD;
            }
        }

        #RESShortcutsEditContainer, #RESShortcutsEditContainer > * {
            background: transparent;
            color: #AAA;
            height: $sr-header-height;
            line-height: $sr-header-height;
        }
        #RESShortcutsEditContainer > *:hover {
            color: #DDD;
        }
    }
}

